--- a/blog/templates/post_create.html
+++ b/blog/templates/post_create.html
@@ -3,21 +3,30 @@
 {% block content %}
 
 
-<h1>Create a new post</h1>
+<h1>{% if post.id is not None %}Edit <i>„{{ post.title }}“</i>{% else %}Create a new post{% end %}</h1>
 <form class="form-horizontal" action="/post/create" method="POST">
     <div class="form-group">
         <label for="inputTitle" class="col-sm-2 control-label">Title</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitle" name="inputTitle" placeholder="Title of the post">
+            <input type="text" class="form-control" id="inputTitle" name="inputTitle" placeholder="Title of the post"
+                {% if post.title %}value="{{ post.title }}"{% end %}>
         </div>
+        {% if post.id is not None %}
+        <input type="hidden" name="postId" id="postId" value="{{ post.id }}">
+        {% end %}
     </div>
     <div class="form-group">
         <label for="inputText" class="col-sm-2 control-label">Text</label>
         <div class="col-sm-10"><textarea name="inputText" id="inputText" cols="30" rows="10"
-                                         class="form-control"></textarea>
+                                         class="form-control">{% if post.text %}{{ post.text }}{% end %}</textarea>
         </div>
     </div>
-    <button class="btn btn-default" type="submit">Submit</button>
+    <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-2">
+            <a class="btn btn-default" href="">Cancel</a>
+            <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+    </div>
 </form>
 
 
