Flash messages feature
* Added flash messages feature
* Separated handlers into mixins
* basic styling for messages

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -41,6 +41,10 @@
           </div>
         </nav>
 
+        {% if 'message' in globals() and message is not None %}
+            <p class="message bg-{{ message_type }}">{{ message }}</p>
+        {% end %}
+
         <div class="container">
         {% block content %} {% end %}
         </div>
@@ -50,7 +54,7 @@
           <footer>
             <p>
                 &copy; {{ datetime.datetime.now().strftime("%Y") }} <a href="https://websolutions.koeln">Constantin Kraft</a> <br />
-                built with Open Source software
+                ~ built with Open Source software ~
             </p>
           </footer>
         </div> <!-- /container -->
