--- a/blog/templates/post_create.html
+++ b/blog/templates/post_create.html
@@ -23,7 +23,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <a class="btn btn-default" href="">Cancel</a>
+            <a class="btn btn-default" href="{{ reverse_url('home') }}">Cancel</a>
             <button class="btn btn-primary" type="submit">Submit</button>
         </div>
     </div>
